--- a/.gitignore
+++ b/.gitignore
@@ -130,4 +130,4 @@ dmypy.json
 
 # ignore files in data
 /sticker_generator/data/*
-!/sticker_generator/data/.gitkeep
+# !/sticker_generator/data/.gitkeep
