--- a/.gitignore
+++ b/.gitignore
@@ -131,5 +131,5 @@ dmypy.json
 # ignore files in data
 /sticker_generator/data/*
 
-!/sticker_generator/data/.gitkeep
+/sticker_generator/data/!.gitkeep
 !.gitignore
