--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,8 @@ dmypy.json
 .pyre/
 
 # ignore files in data
-/sticker_generator/data/*
+./sticker_generator/data/*
 
-/sticker_generator/data/!.gitkeep
+!/sticker_generator/data/.gitkeep
+
 !.gitignore
