--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ dmypy.json
 .pyre/
 
 # ignore files in data
-./sticker_generator/data/
+./sticker_generator/data/*
 
 !/sticker_generator/data/.gitkeep
 
