--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ share/python-wheels/
 *.egg
 MANIFEST
 
+
+#ignore deb
+Selenium/*.deb
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
@@ -129,5 +133,5 @@ dmypy.json
 .pyre/
 
 # ignore files in data
-sticker_generator/data/*
+Sticker_Generator/data
 
