--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@
 ENV_OPENAI_KEY=OPENAI-KEY-HERE
 ENV_OPENAI_ORG=OPENAI-ORG-HERE
 
-# CHROME PROFILE PATH
-ENV_CHROME_PROFILE=CHROME-PATH-HERE
+# CHROME PROFILE PATH - DEPRECATED FOR NOW
+# ENV_CHROME_PROFILE=CHROME-PATH-HERE
