New image transformation pipeline

--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ allow_prereleases = false
 openai = "*"
 selenium = "*"
 webdriver-manager = "*"
-opencv-python = "*"
 numpy = "*"
 flake8 = "*"
 black = "*"
+opencv-contrib-python = "*"
