--- a/sticker-generator-frontend/vercel.json
+++ b/sticker-generator-frontend/vercel.json
@@ -1,23 +1,24 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "api.py",
-        "use": "@vercel/python"
-      },
-      {
-        "src": "sticker-generator-frontend/build",
-        "use": "@vercel/static"
+    "functions": {
+      "api/*": {
+        "runtime": "vercel-python@0.5.0",
+        "memory": 1024,
+        "maxDuration": 10,
+        "includeFiles": [
+          "api.py",
+          "Sticker_Generator/data/**/*"
+        ]
       }
-    ],
+    },
     "routes": [
       {
         "src": "/generate-sticker",
-        "dest": "/api.py"
+        "dest": "api/generate_sticker_endpoint"
       },
       {
         "src": "/Sticker_Generator/data/(.*)",
-        "dest": "http://localhost:5000/Sticker_Generator/data/$1"
+        "dest": "Sticker_Generator/data/$1"
       },
       {
         "src": "/(.*)",
@@ -26,11 +27,6 @@
     ],
     "env": {
       "FLASK_APP": "api.py"
-    },
-    "functions": {
-      "api/*": {
-        "includeFiles": "api.py"
-      }
     }
   }
   
